tests/compile/01-empty-iter.stderr
error: comprehension must not be empty
 --> $DIR/01-empty-iter.rs:4:5
  |
4 |     c![];
  |     ^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
