tests/compile/01-empty-iter.rs
use exhaustive::c;

fn main() {
    c![];
}